# agent-os-action

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT_NATIVE_ROADMAP.md  ALL_PROBLEMS_FIXED.md  AUDIT_MONITOR_QUICKSTART.md  AUDIT_MONITOR_SUMMARY.md  AUTOMATED_AUDIT_GUIDE.md  BEST_PRACTICES_IMPLEMENTATION.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODEBASE_REVIEW_FEEDBACK.md  CODE_REVIEW_WITH_EXAMPLES.md  COLLABORATIVE_REASONING_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_TEST_REPORT.md  CUSTOMER_READINESS_REPORT.md  DAY_60_COMPLETE.md  DEMO.md  DOCKER-SCANNER-README.md  DOCKER_QUICKSTART.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW.md  DUAL_AUDIT_CODE_REFERENCE.md  DUAL_AUDIT_COMPLETE.md  DUAL_AUDIT_ENHANCEMENTS.md  Dockerfile  Dockerfile.complete  E2E_VALIDATION_COMPLETE.md  ENHANCEMENT_INDEX.md  (+112 more)
.agent-doc-creator/agents/: adr-generator.md  architecture-writer.md  doc-validator.md  docusaurus-manager.md  human-edit-detector.md  ml-doc-generator.md  reference-builder.md
.agent-doc-creator/standards/: adr-format.md  ai-disclaimer.md  doc-style.md  frontmatter-standards.md  mermaid-diagrams.md  rfc-format.md
.agent-doc-creator/workflows/: bootstrap-docusaurus.md  create-docs-pr.md  detect-changes.md  generate-adrs.md  generate-architecture-docs.md  generate-ml-docs.md  generate-references.md  generate-rfcs.md  generate-runbooks.md  scan-repository.md  update-sidebars.md  validate-docs.md
.agent-os/: FOUNDATION_SEC_INTEGRATION.md  sandbox-implementation-summary.md  threat-model.json
.agent-os/test-results/: hybrid-scan-20251104-110357.json  hybrid-scan-20251104-110357.md  hybrid-scan-20251104-110357.sarif
.github/: .trigger  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITFLOW.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: 01-general.yml  02-show-and-tell.yml  03-q-and-a.yml  04-feature-ideas.yml  05-case-studies.yml  config.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: automated-audit.yml  code-review.yml  codeql.yml  contract-tests.yml  dependency-review.yml  develop-ci.yml  gitleaks.yml  health-check.yml  hotfix-ci.yml  hybrid-security-scan.yml  integration-tests.yml  lint.yml  pr-decline.yml  publish-container.yml  release-attestation.yml  release-ci.yml  release-day60.yml  release.yml  scorecard.yml  security-regression.yml  semgrep-simple.yml  semgrep.yml  smoke-test.yml  stale.yml  tests.yml
archive/deployment-files/: README.md
archive/old-docs/: AUTOMATED_AUDIT_GUIDE.md  CODE_REVIEWER_PR.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  GITHUB_ACTION_GUIDE.md  GLOBAL_INSTALLATION_GUIDE.md  GLOBAL_SOLUTIONS.md  PULL_REQUEST_SUMMARY.md  QUICK_START.md
audit-reports/spring-attack-surface-$(date +%Y%m%d)/: README.md  action-items.md  executive-summary.md
audit-reports/spring-attack-surface-20251022/: action-items.md  executive-summary.md
case-studies/: README.md  example-fintech-startup.md  example-open-source.md  template.md
config/: multi_repo_example.json
deployment-files/: MANUAL_STEPS_GUIDE.md
deployment-files/metrics/: post-metrics.sh
docker/: README.md  security-sandbox.dockerfile
docs/: AGENT_NATIVE_ROADMAP.md  API_KEY_SETUP.md  ARCHITECTURE.md  BENCHMARK_GUIDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DAST_QUICKSTART.md  DEMO.md  DOCKER_TESTING_GUIDE.md  DOCUMENTATION_SUMMARY.md  DUAL_AUDIT_WORKFLOW.md  ENABLE_CODE_SCANNING.md  ENHANCEMENTS_SUMMARY.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  HYBRID_ANALYZER_GUIDE.md  IMPROVEMENTS-v1.0.15.md  INSTALLATION.md  JOURNEY_SUMMARY.md  LIMITATIONS.md  LLM_AS_JUDGE_COMPLIANCE.md  METRICS_CALCULATOR.md  MIGRATION_GUIDE.md  MULTI_AGENT_GUIDE.md  OLLAMA_GUIDE.md  OLLAMA_SETUP.md  PLATFORM.md  PLATFORM_INTEGRATIONS.md  PLATFORM_QUICK_REFERENCE.md  PYTM_INTEGRATION.md  QUICKSTART.md  REQUIREMENTS.md  SAGEMAKER_SETUP.md  SECURITY_FEATURES_ROADMAP.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  aardvark-mode.md  audit_monitor_guide.md  best-practices.md  (+19 more)
docs/ADRs/: 0001-use-anthropic-claude.md  001-multi-agent-architecture.md  002-cost-guardrails.md  README.md
docs/adrs/: 0001-use-anthropic-claude.md  0002-multi-scanner-architecture.md  0003-ai-triage-strategy.md
examples/: README.md  dast_scanner_example.py  fixed_findings_sample.json  full-feature-workflow.yml  fuzzing_example.md  metrics_calculator_example.py  multi-agent-workflow.yml  pairwise_comparison_example.sh  pairwise_comparison_python_example.py  regression_testing_workflow.sh  remediation_example.py  sast_dast_correlation_example.py  security_test_generator_example.py  spontaneous_discovery_integration.py  threat_intel_integration.py
sboms/: test-sbom.json  test-sbom.provenance.json
schemas/: finding.yaml
scripts/: CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_QUICK_START.md  CACHE_SYSTEM.md  CONSOLIDATION_REPORT.md  PROGRESS_TRACKER_INTEGRATION_EXAMPLE.py  PROGRESS_TRACKER_README.md  PROGRESS_TRACKER_USAGE.md  agent_personas.py  agentos  api_security_scanner.py  audit-cli.py  audit_monitor.py  audit_monitor_integration_example.py  audit_spring_attack_surface.py  cache_manager.py  cached_scanner_example.py  checkov_scanner.py  collaborative_reasoning.py  collaborative_reasoning_example.py  complexity-check.py  configure-slack-github-app.sh  correlator.py  create-real-slack-webhooks.sh  dashboard_generator.py  dast_scanner.py  decision_analyzer.py  deduplicator.py  detect-project-type.sh  docker_manager.py  dual_audit.py  exploitability_triage.py  feedback_collector.py  feedback_tracker.py  fuzzing_engine.py  gate.py  health_check.py  heuristic_audit_spring.py  hybrid_analyzer.py  install_dependencies.sh  install_security_tools.sh  (+46 more)
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_performance_validation.py  test_run_ai_audit.py  test_week1.py
(+272 files in other folders)
